@@ -1,12 +1,30 @@
+/*
+ * TermIt
+ * Copyright (C) 2023 Czech Technical University in Prague
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ */
 package cz.cvut.kbss.termit.service.business;
 
 import cz.cvut.kbss.jopa.model.MultilingualString;
+import cz.cvut.kbss.termit.dto.RdfsResource;
 import cz.cvut.kbss.termit.dto.TermInfo;
-import cz.cvut.kbss.termit.dto.TermStatus;
 import cz.cvut.kbss.termit.dto.assignment.TermOccurrences;
 import cz.cvut.kbss.termit.dto.listing.TermDto;
 import cz.cvut.kbss.termit.environment.Environment;
 import cz.cvut.kbss.termit.environment.Generator;
+import cz.cvut.kbss.termit.exception.InvalidTermStateException;
 import cz.cvut.kbss.termit.exception.NotFoundException;
 import cz.cvut.kbss.termit.model.Term;
 import cz.cvut.kbss.termit.model.Vocabulary;
@@ -21,6 +39,7 @@ import cz.cvut.kbss.termit.service.export.ExportFormat;
 import cz.cvut.kbss.termit.service.export.ExportType;
 import cz.cvut.kbss.termit.service.export.VocabularyExporters;
 import cz.cvut.kbss.termit.service.export.util.TypeAwareByteArrayResource;
+import cz.cvut.kbss.termit.service.language.LanguageService;
 import cz.cvut.kbss.termit.service.repository.ChangeRecordService;
 import cz.cvut.kbss.termit.service.repository.TermRepositoryService;
 import cz.cvut.kbss.termit.util.Configuration;
@@ -40,17 +59,29 @@ import java.net.URI;
 import java.time.Instant;
 import java.util.Collections;
 import java.util.Comparator;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
+import java.util.stream.Stream;
 
 import static cz.cvut.kbss.termit.environment.Generator.generateTermWithId;
-import static cz.cvut.kbss.termit.environment.Generator.generateVocabulary;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.hasItems;
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
+import static org.hamcrest.Matchers.lessThan;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.anyCollection;
+import static org.mockito.Mockito.eq;
+import static org.mockito.Mockito.inOrder;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.spy;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class TermServiceTest {
@@ -79,6 +110,9 @@ class TermServiceTest {
     @Mock
     private CommentService commentService;
 
+    @Mock
+    private LanguageService languageService;
+
     @Spy
     private Configuration configuration = new Configuration();
 
@@ -90,9 +124,9 @@ class TermServiceTest {
     @Test
     void exportGlossaryGetsGlossaryExportForSpecifiedVocabularyFromExporters() {
         final TypeAwareByteArrayResource resource = new TypeAwareByteArrayResource("test".getBytes(),
-                                                                                   ExportFormat.CSV.getMediaType(),
-                                                                                   ExportFormat.CSV.getFileExtension());
-        final ExportConfig exportConfig = new ExportConfig(ExportType.SKOS, ExportFormat.CSV.getMediaType());
+                ExportFormat.EXCEL.getMediaType(),
+                ExportFormat.EXCEL.getFileExtension());
+        final ExportConfig exportConfig = new ExportConfig(ExportType.SKOS, ExportFormat.EXCEL.getMediaType());
         when(exporters.exportGlossary(vocabulary, exportConfig)).thenReturn(Optional.of(resource));
         final Optional<TypeAwareResource> result = sut.exportGlossary(vocabulary, exportConfig);
         assertTrue(result.isPresent());
@@ -154,7 +188,7 @@ class TermServiceTest {
         final List<TermOccurrences> occurrences = Collections
                 .singletonList(
                         new TermOccurrences(term.getUri(), Generator.generateUri(), "test", BigInteger.valueOf(125L),
-                                            cz.cvut.kbss.termit.util.Vocabulary.s_c_souborovy_vyskyt_termu, true));
+                                cz.cvut.kbss.termit.util.Vocabulary.s_c_souborovy_vyskyt_termu, true));
         when(termRepositoryService.getOccurrenceInfo(term)).thenReturn(occurrences);
         final List<TermOccurrences> result = sut.getOccurrenceInfo(term);
         assertEquals(occurrences, result);
@@ -199,7 +233,7 @@ class TermServiceTest {
             final Term child = generateTermWithId();
             when(termRepositoryService.find(child.getUri())).thenReturn(Optional.of(child));
             return child;
-        }).collect(Collectors.toList());
+        }).toList();
         parent.setSubTerms(children.stream().map(TermInfo::new).collect(Collectors.toSet()));
 
         final List<Term> result = sut.findSubTerms(parent);
@@ -237,33 +271,23 @@ class TermServiceTest {
     @Test
     void getReferenceRetrievesTermReferenceFromRepositoryService() {
         final Term t = Generator.generateTermWithId();
-        when(termRepositoryService.getReference(t.getUri())).thenReturn(Optional.of(t));
-        final Optional<Term> result = sut.getReference(t.getUri());
-        assertTrue(result.isPresent());
-        assertEquals(t, result.get());
-        verify(termRepositoryService).getReference(t.getUri());
-    }
-
-    @Test
-    void getRequiredReferenceRetrievesTermReferenceFromRepositoryService() {
-        final Term t = Generator.generateTermWithId();
-        when(termRepositoryService.getRequiredReference(t.getUri())).thenReturn(t);
-        final Term result = sut.getRequiredReference(t.getUri());
+        when(termRepositoryService.getReference(t.getUri())).thenReturn(t);
+        final Term result = sut.getReference(t.getUri());
         assertEquals(t, result);
-        verify(termRepositoryService).getRequiredReference(t.getUri());
+        verify(termRepositoryService).getReference(t.getUri());
     }
 
     @Test
     void findAllRootsIncludingImportsRetrievesRootTermsUsingRepositoryService() {
         final List<TermDto> terms = Collections.singletonList(new TermDto(Generator.generateTermWithId()));
         when(termRepositoryService
-                     .findAllRootsIncludingImported(eq(vocabulary), eq(Constants.DEFAULT_PAGE_SPEC), anyCollection()))
+                .findAllRootsIncludingImported(eq(vocabulary), eq(Constants.DEFAULT_PAGE_SPEC), anyCollection()))
                 .thenReturn(terms);
         final List<TermDto> result = sut.findAllRootsIncludingImported(vocabulary, Constants.DEFAULT_PAGE_SPEC,
-                                                                       Collections.emptyList());
+                Collections.emptyList());
         assertEquals(terms, result);
         verify(termRepositoryService).findAllRootsIncludingImported(vocabulary, Constants.DEFAULT_PAGE_SPEC,
-                                                                    Collections.emptyList());
+                Collections.emptyList());
     }
 
     @Test
@@ -313,24 +337,13 @@ class TermServiceTest {
     void updateInvokesTextAnalysisOnUpdatedTerm() {
         when(vocabularyContextMapper.getVocabularyContext(vocabulary.getUri())).thenReturn(vocabulary.getUri());
         final Term original = generateTermWithId(vocabulary.getUri());
-        final Term toUpdate = new Term();
-        toUpdate.setUri(original.getUri());
+        final Term toUpdate = new Term(original.getUri());
         final String newDefinition = "This term has acquired a new definition";
         toUpdate.setVocabulary(vocabulary.getUri());
         when(termRepositoryService.findRequired(toUpdate.getUri())).thenReturn(original);
         toUpdate.setDefinition(MultilingualString.create(newDefinition, Environment.LANGUAGE));
         sut.update(toUpdate);
         verify(textAnalysisService).analyzeTermDefinition(toUpdate, toUpdate.getVocabulary());
-    }
-
-    @Test
-    void getUnusedTermsReturnsUnusedTermsInVocabulary() {
-        final List<URI> terms = Collections.singletonList(Generator.generateUri());
-        final Vocabulary vocabulary = generateVocabulary();
-        when(termRepositoryService.getUnusedTermsInVocabulary(vocabulary)).thenReturn(terms);
-        final List<URI> result = sut.getUnusedTermsInVocabulary(vocabulary);
-        assertEquals(terms, result);
-        verify(termRepositoryService).getUnusedTermsInVocabulary(vocabulary);
     }
 
     @Test
@@ -348,16 +361,16 @@ class TermServiceTest {
     void setTermDefinitionReplacesExistingTermDefinition() {
         final Term term = Generator.generateTermWithId();
         final TermDefinitionSource existingSource = new TermDefinitionSource(term.getUri(),
-                                                                             new FileOccurrenceTarget(
-                                                                                     Generator.generateFileWithId(
-                                                                                             "existing.html")));
+                new FileOccurrenceTarget(
+                        Generator.generateFileWithId(
+                                "existing.html")));
         term.setDefinitionSource(existingSource);
         final TermDefinitionSource definitionSource = new TermDefinitionSource();
         definitionSource.setTarget(new FileOccurrenceTarget(Generator.generateFileWithId("test.html")));
 
         sut.setTermDefinitionSource(term, definitionSource);
         assertEquals(term.getUri(), definitionSource.getTerm());
-        verify(termOccurrenceRepositoryService).remove(existingSource);
+        verify(termOccurrenceRepositoryService).remove(existingSource.getUri());
         verify(termOccurrenceRepositoryService).persist(definitionSource);
     }
 
@@ -442,7 +455,7 @@ class TermServiceTest {
         final Term parent = generateTermWithId();
         parent.setVocabulary(vocabulary.getUri());
         final Term childToPersist = generateTermWithId();
-        when(vocabularyService.getRequiredReference(vocabulary.getUri())).thenReturn(vocabulary);
+        when(vocabularyService.findRequired(vocabulary.getUri())).thenReturn(vocabulary);
         when(vocabularyContextMapper.getVocabularyContext(vocabulary.getUri())).thenReturn(vocabulary.getUri());
 
         sut.persistChild(childToPersist, parent);
@@ -453,16 +466,14 @@ class TermServiceTest {
 
     @Test
     void updateInvokesTextAnalysisOnAllTermsInTermsVocabularyWhenLabelHasChanged() {
-        final Term original = generateTermWithId();
-        original.setVocabulary(vocabulary.getUri());
-        final Term update = new Term();
-        update.setUri(original.getUri());
+        final Term original = generateTermWithId(vocabulary.getUri());
+        final Term update = new Term(original.getUri());
         update.setLabel(new MultilingualString(original.getLabel().getValue()));
         update.setDefinition(new MultilingualString(original.getDefinition().getValue()));
         update.setDescription(new MultilingualString(original.getDescription().getValue()));
         update.setVocabulary(vocabulary.getUri());
         when(termRepositoryService.findRequired(original.getUri())).thenReturn(original);
-        when(vocabularyService.getRequiredReference(vocabulary.getUri())).thenReturn(vocabulary);
+        when(vocabularyService.getReference(vocabulary.getUri())).thenReturn(vocabulary);
         update.getLabel().set(Environment.LANGUAGE, "updatedLabel");
 
         sut.update(update);
@@ -473,14 +484,12 @@ class TermServiceTest {
     void removeTermDefinitionSourceRemovesOccurrenceRepresentingSourceOfDefinitionOfSpecifiedTerm() {
         final Term term = generateTermWithId();
         final TermDefinitionSource defSource = new TermDefinitionSource(term.getUri(),
-                                                                        new FileOccurrenceTarget(
-                                                                                Generator.generateFileWithId(
-                                                                                        "test.html")));
+                new FileOccurrenceTarget(Generator.generateFileWithId("test.html")));
         defSource.setUri(Generator.generateUri());
         term.setDefinitionSource(defSource);
 
         sut.removeTermDefinitionSource(term);
-        verify(termOccurrenceRepositoryService).remove(defSource);
+        verify(termOccurrenceRepositoryService).remove(defSource.getUri());
     }
 
     @Test
@@ -492,11 +501,56 @@ class TermServiceTest {
     }
 
     @Test
-    void setStatusSetsStatusViaRepositoryService() {
+    void setStateSetsStateViaRepositoryService() {
         final Term term = generateTermWithId();
 
-        sut.setStatus(term, TermStatus.DRAFT);
-        verify(termRepositoryService).setStatus(term, TermStatus.DRAFT);
+        sut.setState(term, Generator.TERM_STATES[2]);
+        verify(termRepositoryService).setState(term, Generator.TERM_STATES[2]);
+    }
+
+    @Test
+    void setStateVerifiesThatStateExists() {
+        final Term term = generateTermWithId();
+        final URI state = Generator.randomItem(Generator.TERM_STATES);
+
+        sut.setState(term, state);
+        final InOrder inOrder = inOrder(languageService, termRepositoryService);
+        inOrder.verify(languageService).verifyStateExists(state);
+        inOrder.verify(termRepositoryService).setState(term, state);
+    }
+
+    @Test
+    void setStateThrowsInvalidTermStateExceptionWhenAttemptingToSetTerminalStateToTermWhoseChildrenAreNotInTerminal() {
+        final Term term = generateTermWithId();
+        term.setSubTerms(Set.of(Generator.generateTermInfoWithId(), Generator.generateTermInfoWithId()));
+        final List<RdfsResource> states = Stream.of(Generator.TERM_STATES)
+                                                .map(uri -> new RdfsResource(uri, MultilingualString.create("State " + Generator.randomInt(0, 100), Environment.LANGUAGE), null, cz.cvut.kbss.termit.util.Vocabulary.s_c_stav_pojmu))
+                                                .collect(Collectors.toList());
+        final RdfsResource terminalState = states.get(states.size() - 1);
+        terminalState.addType(cz.cvut.kbss.termit.util.Vocabulary.s_c_koncovy_stav_pojmu);
+        assertThat(term.getSubTerms().size(), lessThan(Generator.TERM_STATES.length));
+        final Iterator<TermInfo> it = term.getSubTerms().iterator();
+        int i = 0;
+        while (it.hasNext()) {
+            it.next().setState(Generator.TERM_STATES[i++]);
+        }
+        when(languageService.getTermStates()).thenReturn(states);
+        assertThrows(InvalidTermStateException.class, () -> sut.setState(term, terminalState.getUri()));
+        verify(termRepositoryService, never()).setState(eq(term), any(URI.class));
+    }
+
+    @Test
+    void setStateThrowsInvalidTermStateExceptionWhenAttemptingToSetTerminalStateToTermWhoseChildrenHaveNoState() {
+        final Term term = generateTermWithId();
+        term.setSubTerms(Set.of(Generator.generateTermInfoWithId(), Generator.generateTermInfoWithId()));
+        final List<RdfsResource> states = Stream.of(Generator.TERM_STATES)
+                                                .map(uri -> new RdfsResource(uri, MultilingualString.create("State " + Generator.randomInt(0, 100), Environment.LANGUAGE), null, cz.cvut.kbss.termit.util.Vocabulary.s_c_stav_pojmu))
+                                                .collect(Collectors.toList());
+        final RdfsResource terminalState = states.get(states.size() - 1);
+        terminalState.addType(cz.cvut.kbss.termit.util.Vocabulary.s_c_koncovy_stav_pojmu);
+        when(languageService.getTermStates()).thenReturn(states);
+        assertThrows(InvalidTermStateException.class, () -> sut.setState(term, terminalState.getUri()));
+        verify(termRepositoryService, never()).setState(eq(term), any(URI.class));
     }
 
     @Test
@@ -513,7 +567,7 @@ class TermServiceTest {
 
     @Test
     void findConsolidatesParentTerms() {
-        final Term term = spy(generateTermWithId());
+        final Term term = generateTermWithId();
         when(termRepositoryService.find(term.getUri())).thenReturn(Optional.of(term));
 
         final Optional<Term> result = sut.find(term.getUri());
@@ -571,5 +625,71 @@ class TermServiceTest {
 
         final Term result = sut.findVersionValidAt(term, instant);
         assertThat(result.getRelated(), hasItems(related, inverseRelated));
+    }
+
+    @Test
+    void updateVerifiesThatStateExistsTermState() {
+        final Term original = generateTermWithId(vocabulary.getUri());
+        when(termRepositoryService.findRequired(original.getUri())).thenReturn(original);
+        final Term update = new Term(original.getUri());
+        update.setLabel(new MultilingualString(original.getLabel().getValue()));
+        update.setDefinition(new MultilingualString(original.getDefinition().getValue()));
+        update.setDescription(new MultilingualString(original.getDescription().getValue()));
+        update.setVocabulary(vocabulary.getUri());
+        update.setState(Generator.randomItem(Generator.TERM_STATES));
+        sut.update(update);
+        final InOrder inOrder = inOrder(languageService, termRepositoryService);
+        inOrder.verify(languageService).verifyStateExists(update.getState());
+        inOrder.verify(termRepositoryService).update(update);
+    }
+
+    @Test
+    void persistRootSetsInitialStateOfPersistedInstance() {
+        final Term toPersist = Generator.generateTerm();
+        final RdfsResource initialState = new RdfsResource(Generator.TERM_STATES[0], MultilingualString.create("Initial", Environment.LANGUAGE), null, cz.cvut.kbss.termit.util.Vocabulary.s_c_uvodni_stav_pojmu);
+        when(languageService.getInitialTermState()).thenReturn(Optional.of(initialState));
+
+        sut.persistRoot(toPersist, vocabulary);
+        verify(languageService).getInitialTermState();
+        assertEquals(Generator.TERM_STATES[0], toPersist.getState());
+    }
+
+    @Test
+    void persistChildSetsInitialStateOfPersistedInstance() {
+        final Term parent = Generator.generateTermWithId(vocabulary.getUri());
+        final Term toPersist = Generator.generateTerm();
+        final RdfsResource initialState = new RdfsResource(Generator.TERM_STATES[0], MultilingualString.create("Initial", Environment.LANGUAGE), null, cz.cvut.kbss.termit.util.Vocabulary.s_c_uvodni_stav_pojmu);
+        when(languageService.getInitialTermState()).thenReturn(Optional.of(initialState));
+
+        sut.persistChild(toPersist, parent);
+        verify(languageService).getInitialTermState();
+        assertEquals(Generator.TERM_STATES[0], toPersist.getState());
+    }
+
+    @Test
+    void updateThrowsInvalidTermStateExceptionWhenAttemptingToSetTerminalStateToTermWithNonTerminalChild() {
+        final Term term = generateTermWithId();
+        term.setSubTerms(Set.of(Generator.generateTermInfoWithId(), Generator.generateTermInfoWithId()));
+        final List<RdfsResource> states = Stream.of(Generator.TERM_STATES)
+                                                .map(uri -> new RdfsResource(uri, MultilingualString.create("State " + Generator.randomInt(0, 100), Environment.LANGUAGE), null, cz.cvut.kbss.termit.util.Vocabulary.s_c_stav_pojmu))
+                                                .collect(Collectors.toList());
+        final RdfsResource terminalState = states.get(states.size() - 1);
+        terminalState.addType(cz.cvut.kbss.termit.util.Vocabulary.s_c_koncovy_stav_pojmu);
+        assertThat(term.getSubTerms().size(), lessThan(Generator.TERM_STATES.length));
+        final Iterator<TermInfo> it = term.getSubTerms().iterator();
+        int i = 0;
+        while (it.hasNext()) {
+            it.next().setState(Generator.TERM_STATES[i++]);
+        }
+        final Term original = new Term(term.getUri());
+        original.setLabel(new MultilingualString(term.getLabel().getValue()));
+        original.setDefinition(new MultilingualString(term.getDefinition().getValue()));
+        original.setSubTerms(term.getSubTerms().stream().map(TermInfo::new).collect(Collectors.toSet()));
+        term.setState(terminalState.getUri());
+
+        when(languageService.getTermStates()).thenReturn(states);
+        when(termRepositoryService.findRequired(term.getUri())).thenReturn(original);
+        assertThrows(InvalidTermStateException.class, () -> sut.update(term));
+        verify(termRepositoryService, never()).update(term);
     }
 }
